Fixing strokes on SVGs and center aligns

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 .mr-nav {padding: 60px;height: 100vh;}
 svg.mr-logo {fill:white!important;width: 100px;}
-svg.mr-rect {fill:transparent;stroke: white; stroke-width: 6;width: 60px;height:60px;}
-svg.mr-triangle {fill:transparent;stroke: white;stroke-width: 6;width: 60px;height:auto;}
+svg.mr-rect {fill:transparent;stroke: white; stroke-width: 6;width: 50px;height:50px;overflow: visible;}
+svg.mr-rect rect {width: 50px;height: 50px;}
+svg.mr-triangle {fill:transparent;stroke: white;stroke-width: 6;width: 53px;height:auto;overflow: visible;}
 img.mr-circle.mr-avatar {width: 60px;height: 60px;border: white 6px solid;border-radius: 30px;margin: 30px 0;}
